* Added toggle for page specific information box that is visible in mobile devices only. * Fixed rendering issues of page specific information box * Fixed footer rendering issues

--- a/pyramus/src/main/webapp/css/application-desktop.css
+++ b/pyramus/src/main/webapp/css/application-desktop.css
@@ -35,7 +35,12 @@
   margin: 50px 30px;
 } 
 
+.application-header__show-content-information {
+  display: none;  
+}
+
 .application-content__information {
+  display: block;
   flex-basis: calc(40% - 20px);
   flex-grow: 1;
   flex-shrink: 1;
